# chess-ai

./: .gitignore  Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: debug.rs  game.rs  lib.rs  movegen.rs  pgn.rs  renderer.rs  uci.rs  util.rs
crates/core/tests/: fen.rs  perft.rs
crates/first-bot/: Cargo.toml
crates/first-bot/src/: lib.rs
crates/ml-bot/: Cargo.toml
crates/ml-bot/src/: dataset.rs  main.rs  ppo.rs  supervised.rs
crates/random-bot/: Cargo.toml
crates/random-bot/src/: lib.rs  main.rs
crates/random-bot/tests/: random.rs
scripts/: coord_to_pgn.py  game.pgn.txt  game.uci.txt
