[package]
name = "chess-ai-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
opt-level = 3

[dependencies]
anyhow = "1.0.86"
derivative = "2.2.0"
nom = "7.1.3"

[dev-dependencies]
paste = "1.0.15"
